# SimpleIndexer

./: BlockingQueue.h  CMakeLists.txt  DirectoryTraverser.cpp  DirectoryTraverser.h  Errors.h  ExtractWords.h  Indexer.h  IndexingWorkQueue.h  MMapWorkItem.cpp  MMapWorkItem.h  Policies.h  PriorityQueue.h  README.md  SimpleWordCount.h  Utility.cpp  Utility.h  main.cpp
cmake/: gtest-config.cmake
tests/: CMakeLists.txt  Tests.cpp  compare.py  index.py
